# opencv_minimum_example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
